--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(stb_tutorial VERSION 0.1.0)
+project(stb_tutorial VERSION 0.1.0 LANGUAGES CXX)
 
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
