--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 add_subdirectory(std_image_tutorial)
 add_subdirectory(audio_tutorial)
 add_subdirectory(audio_fft)
+add_subdirectory(jpeg_decoder)
 
 set(SOURCE_FILES main.cpp)
 
@@ -22,9 +23,13 @@ target_sources(main PRIVATE ${SOURCE_FILES})
 target_include_directories(main 
   PUBLIC 
     ${PROJECT_INCLUDE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decoder
+    ${CMAKE_CURRENT_SOURCE_DIR}/audio_fft
+    ${CMAKE_CURRENT_SOURCE_DIR}/audio_tutorial
+    ${CMAKE_CURRENT_SOURCE_DIR}/std_image_tutorial
     
   )
 
 
-target_link_libraries(main std_image audio_test audio_fft)
+target_link_libraries(main PUBLIC std_image audio_test audio_fft jpeg_decoder)
 install(TARGETS main DESTINATION ${PROJECT_BIN_DIR})
