--- a/src/jpeg_decoder/CMakeLists.txt
+++ b/src/jpeg_decoder/CMakeLists.txt
@@ -4,10 +4,12 @@ add_library(jpeg_decoder STATIC "")
 target_sources(jpeg_decoder
   PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/tjpgd.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode.cpp
+    # ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode_grayscale.cpp
   PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/tjpgd.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode.h
+    # ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/jpeg_decode_grayscale.h
 
   )
 
